prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/model-with-flag.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/model-with-flag.rs:29:11
   |
29 | #[ensures(x.model().a == x.model().b)]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/model-with-flag.rs:30:1
   |
30 | fn test1(x: X) {}
   | ^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   X_model {
            a: 0,
            b: -2147475929,
        }
  --> $DIR/model-with-flag.rs:30:10
   |
30 | fn test1(x: X) {}
   |          ^
note: counterexample for "x"
       value:   X {
            a: A {
                a: 0,
            },
            b: B {
                b: -2147475929,
            },
        }
  --> $DIR/model-with-flag.rs:30:10
   |
30 | fn test1(x: X) {}
   |          ^
note: counterexample for "result"
       value:   ()
  --> $DIR/model-with-flag.rs:30:16
   |
30 | fn test1(x: X) {}
   |                ^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/model-with-flag.rs:36:11
   |
36 | #[ensures(x.model().b == y.model().a)]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/model-with-flag.rs:37:1
   |
37 | fn test2(x: X, y: X) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   X_model {
            a: 0,
            b: -2147475929,
        }
  --> $DIR/model-with-flag.rs:37:10
   |
37 | fn test2(x: X, y: X) {}
   |          ^
note: counterexample for "x"
       value:   X {
            a: A {
                a: 0,
            },
            b: B {
                b: -2147475929,
            },
        }
  --> $DIR/model-with-flag.rs:37:10
   |
37 | fn test2(x: X, y: X) {}
   |          ^
note: counterexample for "y"
       value:   X_model {
            a: -2147481211,
            b: -2147474793,
        }
  --> $DIR/model-with-flag.rs:37:16
   |
37 | fn test2(x: X, y: X) {}
   |                ^
note: counterexample for "y"
       value:   X {
            a: A {
                a: -2147481211,
            },
            b: B {
                b: -2147474793,
            },
        }
  --> $DIR/model-with-flag.rs:37:16
   |
37 | fn test2(x: X, y: X) {}
   |                ^
note: counterexample for "result"
       value:   ()
  --> $DIR/model-with-flag.rs:37:22
   |
37 | fn test2(x: X, y: X) {}
   |                      ^^

error: aborting due to 2 previous errors

